Fix build error

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - cpu
     image: ${RAGFLOW_IMAGE}
     # Example configuration to set up an MCP server:
-    command:
+    # command:
     #   - --enable-mcpserver
     #   - --mcp-host=0.0.0.0
     #   - --mcp-port=9382
@@ -18,7 +18,6 @@ services:
     #   - --mcp-script-path=/ragflow/mcp/server/server.py
     #   - --mcp-mode=self-host
     #   - --mcp-host-api-key=ragflow-RmM2NiZGM0OTIwNDExZjBhZDk3ZTZhYj
-        - --enable-adminserver
     # Optional transport flags for MCP (customize if needed).
     # Host mode need to combined with --no-transport-streamable-http-enabled flag, namely, host+streamable-http is not supported yet.
     # The following are enabled by default unless explicitly disabled with --no-<flag>.
